<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Weight (kg)"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Height (cm)"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calculate BMI"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/openCalorieCalculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Daily Calorie Calculator"
        android:layout_marginTop="24dp"/>


    <TextView
        android:id="@+id/bmiResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your BMI: -"
        android:textSize="18sp"
        android:layout_marginTop="48dp"/>

    <TextView
        android:id="@+id/bmiStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Status: -"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/bmiChartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show BMI chart"
        android:onClick="goToChart"
        android:layout_marginTop="16dp" />
</LinearLayout>
